# loinchpo

./: .buildinfo  .coveragerc  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  MANIFEST.in  README.md  environment.yml  genindex.html  index.html  loinchpo.core.html  loinchpo.error.html  loinchpo.html  loinchpo.io.html  loinchpo.model.html  modules.html  objects.inv  omop.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  usage.html
.doctrees/: environment.pickle  index.doctree  loinchpo.core.doctree  loinchpo.doctree  loinchpo.error.doctree  loinchpo.io.doctree  loinchpo.model.doctree  modules.doctree  omop.doctree  usage.doctree
.github/workflows/: documentation.yml  manual.yml
_sources/: loinchpo.core.rst.txt  loinchpo.error.rst.txt  loinchpo.io.rst.txt  loinchpo.model.rst.txt  loinchpo.rst.txt  modules.rst.txt  usage.rst.txt
conda_recipe/: meta.yaml  run_test.bat  run_test.sh
docs/: conf.py  index.rst  omop.rst
loinchpo/: __init__.py  main.py
loinchpo/core/: Cleaner.py  ConceptSynonymTransformer.py  ConceptTransformer.py  MeasurementTransformer.py  OMOPTransformer.py  QueryResolver.py
loinchpo/error/: ClinicalParsingError.py  LoincHpoDataValidationError.py  LoincHpoParsingError.py
loinchpo/errors/: LoincHpoValidationError.py
loinchpo/io/: AnnotationParser.py  ClinicalTableParser.py  QueryFileParser.py  Utility.py
loinchpo/model/: ClinicalTableColumns.py  LoincId.py  (+3 more)
phenoshift/: __init__.py  main.py
seep_hpo/: __init__.py  main.py  test_example.py  test_main.py
tests/: test.py  test_cli.py
(+85 files in other folders)
